# minimax_m2_tool_def_to_gbnf

./: LICENSE  README.md  benchmark.py  main.py  pyproject.toml
.github/workflows/: ci.yml
minimax_m2_grammar/: __init__.py  minimax_m2_grammar.py  test_minimax_m2_grammar.py
minimax_m2_tool_def_to_gbnf/: __init__.py  gbnf.py
tests/: test_minimax_m2_tool_def_to_gbnf.py  tokenizer.py
tests/config/models--MiniMaxAI--MiniMax-M2.5/refs/: main
tests/config/models--MiniMaxAI--MiniMax-M2.5/snapshots/f710177d938eff80b684d42c5aa84b382612f21f/: chat_template.jinja  config.json  merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
