[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimax-m2-tool-def-to-gbnf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<4,>=3.9"
dependencies = [
    "xgrammar>=0.1.32",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.8.0",
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
include = ["minimax_m2_tool_def_to_gbnf"]
exclude = ["**/__pycache__", ".venv"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["minimax_m2_tool_def_to_gbnf"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
